force-app/utils/frameworks/logging/objects/Log__c/fields/ExceptionCodeLine__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCodeLine__c</fullName>
    <label>Exception Code Line</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>