force-app/utils/frameworks/logging/objects/Log__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>