force-app/utils/frameworks/logging/objects/Log__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <label>Http Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>OPTIONS</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
            <value>
                <fullName>CONNECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>