force-app/utils/frameworks/logging/objects/Log__c/fields/HttpStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HttpStatusCode__c</fullName>
    <label>Http Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>205</fullName>
            </value>
            <value>
                <fullName>206</fullName>
            </value>
            <value>
                <fullName>207</fullName>
            </value>
            <value>
                <fullName>208</fullName>
            </value>
            <value>
                <fullName>226</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>302</fullName>
            </value>
            <value>
                <fullName>303</fullName>
            </value>
            <value>
                <fullName>304</fullName>
            </value>
            <value>
                <fullName>305</fullName>
            </value>
            <value>
                <fullName>307</fullName>
            </value>
            <value>
                <fullName>308</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
            <value>
                <fullName>402</fullName>
            </value>
            <value>
                <fullName>403</fullName>
            </value>
            <value>
                <fullName>404</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>406</fullName>
            </value>
            <value>
                <fullName>407</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>