force-app/utils/frameworks/logging/objects/Log__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>Request Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>