force-app/utils/frameworks/logging/objects/Log__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <label>Response Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>