force-app/utils/frameworks/logging/objects/Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>