force-app/utils/frameworks/logging/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Integration API</fullName>
            </value>
            <value>
                <fullName>Integration Callout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>